[package]
name = "evo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.24.0", features = ["parallel", "simd-stable"]}
tracing = "0.1"
rand = "0.8"
bevy-inspector-egui = "0.22.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1